--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+This is fork from mjedynak/builder-generator-idea-plugin to generate Atom pattern
+instead of Builder. More info see https://github.com/Vedenin/atomical-programming .
+
+
 Plugin for IntelliJ IDEA that adds ability to generate builder for a class and switch between them.
 Switching between builder and source class is similar to 'Go To Test' action.
 Generated builder class does not use reflection, only setter methods or constructor.
